--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -27,7 +27,25 @@ img{
 }
 
 .contact-section{
+    text-align: center;
     padding-top: 100px;
     padding-bottom: 100px;
     background: indianred;
+}
+.portfolio{
+    padding-top: 100px;
+    padding-bottom: 100px;
+    text-align: center;
+    background: black;
+    color: antiquewhite;
+}
+.portfolio-h2{
+    font-size: 4em;
+}
+.skills{
+    padding-top: 100px;
+    padding-bottom: 100px;
+    text-align: center;
+    background: dimgrey;
+    color: greenyellow;
 }
