--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -1,16 +1,15 @@
 body {
 
-    background-image: url("/img/dk-logo.png");
+    background-image: url("black-background-image-2.jpg");;
 }
 
 img{
     width: 30%;
 }
-.dk-box{
-    text-align: center;
-    background-image: url("/img/dk-logo.png");
-    background: darkgray;
-    border-radius: 4px;
+
+
+.top-nav{
+    text-align: right;
 }
 .about-text{
 
@@ -48,4 +47,12 @@ img{
     text-align: center;
     background: dimgrey;
     color: greenyellow;
+}
+/* starting with new styles*/
+.main-section{
+    font-size: 4em;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    text-align: center;
+    color: floralwhite;
 }
